changed decisionNumber from linked list to array list